Add another contact footer, rename these.

--- a/app.sass
+++ b/app.sass
@@ -13,6 +13,9 @@ body
     font-family: 'B612 Mono', monospace;
     margin: 2.5rem;
 
+body#body-cv
+    background-color: transparent;
+
 #copyright
     font-size: 0.8rem;
     font-weight: 300;
