--- a/www-hakyll/templates/cv.html
+++ b/www-hakyll/templates/cv.html
@@ -264,14 +264,14 @@
             }
         </script>
     </head>
-    <body>
+    <body id="body-cv">
         <div class="container">
             <div class="row">
                 <div id="content-cv">
                     $body$
                     <hr/>
                     <footer>
-                        $partial("templates/philderbeast-contact.html")$
+                        $partial("templates/contact-cv.html")$
                     </footer>
                 </div>
             </div>
