Split work history into sections with headers.

--- a/app.sass
+++ b/app.sass
@@ -140,7 +140,7 @@ blockquote footer:before
 .obvious
     color: #b15928;
 
-#work-history > ul
+div.work-history > ul
     list-style-type: none;
     padding-inline-start: 0px;
 
