Get rid of braces around time range, color and use em dash instead of ..

--- a/app.sass
+++ b/app.sass
@@ -104,40 +104,40 @@ blockquote footer:before
         flex: 0 0 100%;
         max-width: 100%;
 
-.flaretiming, .sml
+.flaretiming, .flaretiming + code, .sml
     color: #a6cee3;
 
-.aqualinc, .trimble
+.aqualinc, .aqualinc + code, .trimble
     color: #1f78b4;
 
-.cactus
+.cactus, .cactus + code
     color: #b2df8a;
 
-.tagly
+.tagly, .tagly + code
     color: #33a02c;
 
-.apress
+.apress, .apress + code
     color: #fb9a99;
 
-.travieo
+.travieo, .travieo + code
     color: #e31a1c;
 
-.croplogic
+.croplogic, .croplogic + code
     color: #fdbf6f;
 
-.waimak
+.waimak, .waimak + code
     color: #ff7f00;
 
-.nutricentre
+.nutricentre, .nutricentre + code
     color: #cab2d6;
 
-.niwa
+.niwa, .niwa + code
     color: #6a3d9a;
 
-.aspelle
+.aspelle, .aspelle + code
     color: #ffff99;
 
-.obvious
+.obvious, .obvious + code
     color: #b15928;
 
 div.work-history > ul
