--- a/app.sass
+++ b/app.sass
@@ -104,41 +104,83 @@ blockquote footer:before
         flex: 0 0 100%;
         max-width: 100%;
 
+// NOTE: First group of 4.
+// SEE: https://colorbrewer2.org/#type=qualitative&scheme=Set1&n=4
+// #e41a1c
+// #377eb8
+// #4daf4a
+// #984ea3
+$flaretiming: #e41a1c;
+$aqualinc: #377eb8;
+$tagly: #4daf4a;
+$apress: #984ea3;
+
+// NOTE: Second group of 6.
+// SEE: https://colorbrewer2.org/#type=qualitative&scheme=Dark2&n=6
+// #1b9e77
+// #d95f02
+// #7570b3
+// #e7298a
+// #66a61e
+// #e6ab02
+$cactus: #1b9e77;
+$travieo: #d95f02;
+$croplogic: #7570b3;
+$waimak: #e7298a;
+$nutricentre: #66a61e;
+$niwa: #e6ab02;
+
+// NOTE: Third group of 4.
+// SEE: https://colorbrewer2.org/#type=qualitative&scheme=Set2&n=4
+// #66c2a5
+// #fc8d62
+// #8da0cb
+// #e78ac3
+$obvious: #66c2a5;
+$aspelle: #fc8d62;
+$sml: #8da0cb;
+$trimble: #e78ac3;
+
+$twitter: #1da1f2;
+$linkedin: #0077b5;
+$stackoverflow: #f48024;
+$skype: #00aff0;
+
 .flaretiming, .flaretiming + code, .sml
-    color: #a6cee3;
+    color: $flaretiming;
 
 .aqualinc, .aqualinc + code, .trimble
-    color: #1f78b4;
+    color: $aqualinc;
 
 .cactus, .cactus + code
-    color: #b2df8a;
+    color: $cactus;
 
 .tagly, .tagly + code
-    color: #33a02c;
+    color: $tagly;
 
 .apress, .apress + code
-    color: #fb9a99;
+    color: $apress;
 
 .travieo, .travieo + code
-    color: #e31a1c;
+    color: $travieo;
 
 .croplogic, .croplogic + code
-    color: #fdbf6f;
+    color: $croplogic;
 
 .waimak, .waimak + code
-    color: #ff7f00;
+    color: $waimak;
 
 .nutricentre, .nutricentre + code
-    color: #cab2d6;
+    color: $nutricentre;
 
 .niwa, .niwa + code
-    color: #6a3d9a;
+    color: $niwa;
 
 .aspelle, .aspelle + code
-    color: #ffff99;
+    color: $aspelle;
 
 .obvious, .obvious + code
-    color: #b15928;
+    color: $obvious;
 
 div.work-history > ul
     list-style-type: none;
