--- a/app.sass
+++ b/app.sass
@@ -146,10 +146,10 @@ $linkedin: #0077b5;
 $stackoverflow: #f48024;
 $skype: #00aff0;
 
-.flaretiming, .flaretiming + code, .sml
+.flaretiming, .flaretiming + code
     color: $flaretiming;
 
-.aqualinc, .aqualinc + code, .trimble
+.aqualinc, .aqualinc + code
     color: $aqualinc;
 
 .cactus, .cactus + code
@@ -181,6 +181,12 @@ $skype: #00aff0;
 
 .obvious, .obvious + code
     color: $obvious;
+
+.sml, .sml + code
+    color: $sml;
+
+.trimble, .trimble + code
+    color: $trimble;
 
 div.work-history > ul
     list-style-type: none;
