Get rid of padding on margin on the work history.

--- a/app.sass
+++ b/app.sass
@@ -192,6 +192,11 @@ div.work-history > ul
     list-style-type: none;
     padding-inline-start: 0px;
 
+div.work-history,
+div.work-history > pre
+    padding: 0;
+    margin: 0;
+
 a:target::after
     content: " ☜";
 
