Layout the list markers with colours, add key for $, # and ?.

--- a/app.sass
+++ b/app.sass
@@ -146,55 +146,70 @@ $linkedin: #0077b5;
 $stackoverflow: #f48024;
 $skype: #00aff0;
 
-.flaretiming, .flaretiming + code
+.flaretiming,
+.flaretiming > code
     color: $flaretiming;
 
-.aqualinc, .aqualinc + code
+.aqualinc,
+.aqualinc > code
     color: $aqualinc;
 
-.cactus, .cactus + code
+.cactus,
+.cactus > code
     color: $cactus;
 
-.tagly, .tagly + code
+.tagly,
+.tagly > code
     color: $tagly;
 
-.apress, .apress + code
+.apress,
+.apress > code
     color: $apress;
 
-.travieo, .travieo + code
+.travieo,
+.travieo > code
     color: $travieo;
 
-.croplogic, .croplogic + code
+.croplogic,
+.croplogic > code
     color: $croplogic;
 
-.waimak, .waimak + code
+.waimak,
+.waimak > code
     color: $waimak;
 
-.nutricentre, .nutricentre + code
+.nutricentre,
+.nutricentre > code
     color: $nutricentre;
 
-.niwa, .niwa + code
+.niwa,
+.niwa > code
     color: $niwa;
 
-.aspelle, .aspelle + code
+.aspelle,
+.aspelle > code
     color: $aspelle;
 
-.obvious, .obvious + code
+.obvious,
+.obvious > code
     color: $obvious;
 
-.sml, .sml + code
+.sml,
+.sml > code
     color: $sml;
 
-.trimble, .trimble + code
+.trimble,
+.trimble > code
     color: $trimble;
 
 div.work-history > ul
     list-style-type: none;
-    padding-inline-start: 0px;
+    padding-inline-start: 0;
+    text-indent: -3.2rem;
+    margin-left: 3.2rem;
 
 div.work-history,
 div.work-history > pre
-    padding: 0;
     margin: 0;
 
 a:target::after
