--- a/www-hakyll/templates/contact-cv.html
+++ b/www-hakyll/templates/contact-cv.html
@@ -13,6 +13,8 @@
         <i class="fa fa-envelope"></i><a href="mailto:phil.dejoux@blockscope.com"> phil.dejoux@blockscope.com</a><br/>
         <i class="fa fa-phone"></i> +1-450-675-9180<br/>
         <i style="color:#00aff0" class="fa fa-skype"></i> philderbeast<br/>
+        <br />
+        <pre>&dollar;=full time, #=part time, ?=unpaid</pre>
     </address>
 </div>
 <div class="col-4">
