--- a/app.sass
+++ b/app.sass
@@ -2,7 +2,7 @@
 $fa-font-path: "~font-awesome/fonts";
 @import "~font-awesome/scss/font-awesome.scss";
 @import "pandoc-solarized.css";
-@import url('https://fonts.googleapis.com/css?family=B612|B612+Mono&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans|B612|B612+Mono&display=swap');
 
 $body-bg: #fffff8;
 @import "~bootstrap/scss/bootstrap";
