Publish font and index content changes.

--- a/css/app.css
+++ b/css/app.css
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=B612|B612+Mono&display=swap);
+@import url(https://fonts.googleapis.com/css?family=Open+Sans|B612|B612+Mono&display=swap);
 /* SEE: https://github.com/jez/tufte-pandoc-css */
 .sourceCode span.kw { color: #859900; font-weight: normal; font-style: normal; } /* Keyword */
 .sourceCode span.dt { color: #B58900; font-weight: normal; font-style: normal; } /* DataType */
