--- a/app.sass
+++ b/app.sass
@@ -105,15 +105,17 @@ blockquote footer:before
         max-width: 100%;
 
 // NOTE: First group of 4.
-// SEE: https://colorbrewer2.org/#type=qualitative&scheme=Set1&n=4
+// SEE: https://colorbrewer2.org/#type=qualitative&scheme=Set1&n=5
 // #e41a1c
 // #377eb8
 // #4daf4a
 // #984ea3
-$flaretiming: #e41a1c;
-$aqualinc: #377eb8;
-$tagly: #4daf4a;
-$apress: #984ea3;
+// #ff7f00
+$bracco: #e41a1c
+$flaretiming: #377eb8;
+$aqualinc: #4daf4a;
+$tagly: #984ea3;
+$apress: #ff7f00;
 
 // NOTE: Second group of 6.
 // SEE: https://colorbrewer2.org/#type=qualitative&scheme=Dark2&n=6
@@ -145,6 +147,10 @@ $twitter: #1da1f2;
 $linkedin: #0077b5;
 $stackoverflow: #f48024;
 $skype: #00aff0;
+
+.bracco,
+.bracco > code
+    color: $bracco;
 
 .flaretiming,
 .flaretiming > code
