--- a/app.sass
+++ b/app.sass
@@ -48,7 +48,6 @@ article
 .pre
     color: #fff;
     background-color: #000;
-    padding: 1rem;
 
 .spacer
     height: 20px;
@@ -104,6 +103,8 @@ blockquote footer:before
         flex: 0 0 100%;
         max-width: 100%;
 
+$date: #808080;
+
 // NOTE: First group of 4.
 // SEE: https://colorbrewer2.org/#type=qualitative&scheme=Set1&n=5
 // #e41a1c
@@ -147,6 +148,10 @@ $twitter: #1da1f2;
 $linkedin: #0077b5;
 $stackoverflow: #f48024;
 $skype: #00aff0;
+
+.date,
+.date > code
+    color: $date;
 
 .bracco,
 .bracco > code
