--- a/www-hakyll/templates/contact-cv.html
+++ b/www-hakyll/templates/contact-cv.html
@@ -14,7 +14,7 @@
         <i class="fa fa-phone"></i> +1-450-675-9180<br/>
         <i style="color:#00aff0" class="fa fa-skype"></i> philderbeast<br/>
         <br />
-        <pre>&dollar;=full time, #=part time, ?=unpaid</pre>
+        <pre><code><span class="date">&dollar;=full time, #=part time, ?=unpaid</span></code></pre>
     </address>
 </div>
 <div class="col-4">
