Redo the grouping of work sections.

--- a/app.sass
+++ b/app.sass
@@ -213,6 +213,11 @@ $skype: #00aff0;
 .trimble > code
     color: $trimble;
 
+h2.work-section
+    font-family: SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace;
+    font-size: 1rem;
+    padding-left: 1.5rem;
+
 div.work-history > ul
     list-style-type: none;
     padding-inline-start: 0;
