Redo CV, grouping travieo with F#.

--- a/app.sass
+++ b/app.sass
@@ -106,28 +106,17 @@ blockquote footer:before
 $date: #808080;
 
 // NOTE: First group of 4.
-// SEE: https://colorbrewer2.org/#type=qualitative&scheme=Set1&n=5
-// #e41a1c
-// #377eb8
-// #4daf4a
-// #984ea3
-// #ff7f00
-$bracco: #e41a1c
-$flaretiming: #377eb8;
-$aqualinc: #4daf4a;
-$tagly: #984ea3;
-$apress: #ff7f00;
+// SEE: https://colorbrewer2.org/#type=qualitative&scheme=Set1&n=6
+$bracco: #a6cee3;
+$flaretiming: #1f78b4;
+$aqualinc: #b2df8a;
+$tagly: #33a02c;
+$apress: #fb9a99;
+$travieo: #e31a1c;
 
 // NOTE: Second group of 6.
-// SEE: https://colorbrewer2.org/#type=qualitative&scheme=Dark2&n=6
-// #1b9e77
-// #d95f02
-// #7570b3
-// #e7298a
-// #66a61e
-// #e6ab02
+// SEE: https://colorbrewer2.org/#type=qualitative&scheme=Dark2&n=5
 $cactus: #1b9e77;
-$travieo: #d95f02;
 $croplogic: #7570b3;
 $waimak: #e7298a;
 $nutricentre: #66a61e;
@@ -135,10 +124,6 @@ $niwa: #e6ab02;
 
 // NOTE: Third group of 4.
 // SEE: https://colorbrewer2.org/#type=qualitative&scheme=Set2&n=4
-// #66c2a5
-// #fc8d62
-// #8da0cb
-// #e78ac3
 $obvious: #66c2a5;
 $aspelle: #fc8d62;
 $sml: #8da0cb;
