Upgrade yarn, init clean and add back dependencies.

--- a/app.sass
+++ b/app.sass
@@ -7,7 +7,7 @@ $fa-font-path: "~font-awesome/fonts";
 $body-bg: #fffff8;
 @import "~bootstrap/scss/bootstrap";
 @import "~typeface-et-book/et-book/et-book.css";
-@import "~automated-a11y-sass/a11y-color";
+@import "./automated-a11y-sass/a11y-color";
 
 body
     font-family: 'B612 Mono', monospace;
