--- a/www-hakyll/templates/contact-blockscope.html
+++ b/www-hakyll/templates/contact-blockscope.html
@@ -10,9 +10,9 @@
 </div> 
 <div class="col-6">
   <address>
-    <i class="fa fa-envelope"></i><a href="mailto:info@blockscope.com"> info@blockscope.com</a><br/>
-    <i class="fa fa-phone"></i> +1-450-675-9180<br/>
+    <i class="far fa-envelope"></i><a href="mailto:info@blockscope.com"> info@blockscope.com</a><br/>
+    <i class="fas fa-phone"></i> +1-450-675-9180<br/>
   </address>
-  <i class="fa fa-github"></i>
+  <i class="fab fa-github"></i>
   <a href="https://github.com/blockscope" target="_blank" rel="noopener">github/blockscope</a><br/>
 </div>
