Use only solid envelope icons.

--- a/www-hakyll/templates/contact-blockscope.html
+++ b/www-hakyll/templates/contact-blockscope.html
@@ -10,7 +10,7 @@
 </div> 
 <div class="col-6">
   <address>
-    <i class="far fa-envelope"></i><a href="mailto:info@blockscope.com"> info@blockscope.com</a><br/>
+    <i class="fas fa-envelope"></i><a href="mailto:info@blockscope.com"> info@blockscope.com</a><br/>
     <i class="fas fa-phone"></i> +1-450-675-9180<br/>
   </address>
   <i class="fab fa-github"></i>
