--- a/www-hakyll/templates/contact-philderbeast.html
+++ b/www-hakyll/templates/contact-philderbeast.html
@@ -10,7 +10,7 @@
 </div>
 <div class="col-6">
     <address>
-        <i class="far fa-envelope"></i><a href="mailto:phil.dejoux@blockscope.com"> phil.dejoux@blockscope.com</a><br/>
+        <i class="fas fa-envelope"></i><a href="mailto:phil.dejoux@blockscope.com"> phil.dejoux@blockscope.com</a><br/>
         <i class="fas fa-phone"></i> +1-450-675-9180<br/>
         <i style="color:#00aff0" class="fab fa-skype"></i> philderbeast<br/>
     </address>
