--- a/app.sass
+++ b/app.sass
@@ -51,6 +51,8 @@ article
 .pre
     color: #fff;
     background-color: #000;
+    padding: 1em 2em 1em 1em;
+    border-radius: 1em;
 
 .spacer
     height: 20px;
