Change the meta description to something less cheesy.

--- a/www-hakyll/templates/meta.html
+++ b/www-hakyll/templates/meta.html
@@ -1,18 +1,18 @@
 <!-- Primary Meta Tags -->
 <meta name="title" content="Block Scope - Fresh coding and untangling knotty codebases.">
-<meta name="description" content="With Block Scope, prototype and develop the best functional programs.">
+<meta name="description" content="Linking moves, deferring to the compilers.">
 
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://blockscope.com/">
 <meta property="og:title" content="Block Scope - Fresh coding and untangling knotty codebases.">
-<meta property="og:description" content="With Block Scope, prototype and develop the best functional programs.">
+<meta property="og:description" content="Linking moves, deferring to the compilers.">
 <meta property="og:image" content="https://blockscope.com/mstile-150x150.png">
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image">
 <meta property="twitter:url" content="https://blockscope.com/">
 <meta property="twitter:title" content="Block Scope - Fresh coding and untangling knotty codebases.">
-<meta property="twitter:description" content="With Block Scope, prototype and develop the best functional programs.">
+<meta property="twitter:description" content="Linking moves, deferring to the compilers.">
 <meta property="twitter:image" content="https://blockscope.com/mstile-150x150.png">
 <meta property="twitter:image-alt" content="Curly braces enclosing ellipsis">
