First draft of the import reduction post.

--- a/app.sass
+++ b/app.sass
@@ -63,6 +63,16 @@ article
     padding: 1em 2em 1em 1em;
     border-radius: 1em;
 
+#ifdef .pre
+    color: #000;
+    background-color: transparent;
+    border: solid 1px #000;
+    opacity: 0.5;
+    font-size: 5pt;
+    float: right;
+    position: relative;
+    left: 10px;
+
 .spacer
     height: 20px;
 
