--- a/app.sass
+++ b/app.sass
@@ -23,7 +23,7 @@ body#body-cv
     font-size: 0.8rem;
     font-weight: 300;
 
-.badge
+.badge, #copyright
     font-family: 'B612 Mono', monospace;
     font-size: 0.8rem;
     font-weight: 300;
