--- a/app.sass
+++ b/app.sass
@@ -62,6 +62,8 @@ article
     background-color: #000;
     padding: 1em 2em 1em 1em;
     border-radius: 1em;
+    font-size: 10pt;
+    font-family: 'B612 Mono', monospace;
 
 #ifdef .pre
     color: #000;
