Put words in raw html block.

--- a/app.sass
+++ b/app.sass
@@ -57,7 +57,7 @@ article
     color: #000;
     background-color: transparent;
 
-.pre
+.pre, .mono-flow
     color: #fff;
     background-color: #000;
     padding: 1em 2em 1em 1em;
