Don't change the color of .mono-flow.

--- a/app.sass
+++ b/app.sass
@@ -57,9 +57,11 @@ article
     color: #000;
     background-color: transparent;
 
-.pre, .mono-flow
+.pre
     color: #fff;
     background-color: #000;
+
+.pre, .mono-flow
     padding: 1em 2em 1em 1em;
     border-radius: 1em;
     font-size: 10pt;
