--- a/templates/philderbeast.html
+++ b/templates/philderbeast.html
@@ -4,7 +4,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
         $partial("templates/meta.html")$
-        <title>Block Scope - Fresh coding and untangling knotty codebases.</title>
+        <title>About $title$</title>
         <link rel="stylesheet" href="/css/app.css" >
         $partial("templates/favicon.html")$
     </head>
@@ -18,11 +18,10 @@
                     $body$
                     <hr/>
                     <footer>
-                        $partial("templates/contact-blockscope.html")$
+                        $partial("templates/contact-philderbeast.html")$
                     </footer>
                 </div>
             </div>
         </div>
     </body>
-    <script language="javascript" src="/css/app.js" defer></script>
 </html>
