--- a/templates/project.html
+++ b/templates/project.html
@@ -4,7 +4,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
         $partial("templates/meta.html")$
-        <title>About $title$</title>
+        <title>$title$</title>
         <link rel="stylesheet" href="/css/app.css" >
         $partial("templates/favicon.html")$
     </head>
@@ -14,15 +14,10 @@
                 <div id="side" class="col-3 card d-print-none">
                     $partial("templates/nav.html")$
                 </div>
-                <div id="content">
+                <div class="col-9">
                     $body$
-                    <hr/>
-                    <footer>
-                        $partial("templates/contact-philderbeast.html")$
-                    </footer>
                 </div>
             </div>
         </div>
     </body>
-    <script language="javascript" src="/css/app.js" defer></script>
 </html>
