--- a/templates/contact-philderbeast.html
+++ b/templates/contact-philderbeast.html
@@ -1,5 +1,5 @@
 <div class="row">
-<div class="col-4">
+<div class="col-6">
 <address>
     <strong>Phil de Joux</strong><br/>
     1425 chemin de la Rivière<br/>
@@ -8,16 +8,12 @@
     CANADA<br/>
 </address>
 </div>
-<div class="col-4">
+<div class="col-6">
     <address>
         <i class="fas fa-envelope"></i><a href="mailto:phil.dejoux@blockscope.com"> phil.dejoux@blockscope.com</a><br/>
         <i class="fas fa-phone"></i> +1-450-675-9180<br/>
         <i style="color:#00aff0" class="fab fa-skype"></i> philderbeast<br/>
-        <br />
-        <pre><code><span class="date">&dollar;=full time, #=part time, ?=unpaid</span></code></pre>
     </address>
-</div>
-<div class="col-4">
     <div class="d-print-none">
         <i class="fab fa-github"></i>
         <a href="https://github.com/philderbeast" target="_blank" rel="noopener">github/philderbeast</a><br/>
@@ -27,7 +23,7 @@
         <a href="http://www.linkedin.com/pub/phil-de-joux/0/b19/a51" target="_blank" rel="noopener">linkedin</a><br/>
         <i style="color:#f48024" class="fab fa-stack-overflow"></i>
         <a href="https://stackoverflow.com/users/story/1503186" target="_blank" rel="noopener">stackoverflow</a><br/>
-        <img style="position:relative;top=-20px" src="https://hackage.haskell.org/static/favicon.png" width="14px" height="14px" />
+        <img style="position:relative;top:-2px" src="https://hackage.haskell.org/static/favicon.png" width="14px" height="14px" />
         <a href="https://hackage.haskell.org/user/philderbeast" target="_blank" rel="noopener">hackage</a><br/>
     </div>
 </div>
