--- a/templates/cv.html
+++ b/templates/cv.html
@@ -4,21 +4,21 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
         $partial("templates/meta.html")$
-        <title>$title$</title>
+        <title>CV - $title$</title>
         <link rel="stylesheet" href="/css/app.css" >
         $partial("templates/favicon.html")$
     </head>
-    <body>
+    <body id="body-cv">
         <div class="container">
             <div class="row">
-                <div id="side" class="col-3 card d-print-none">
-                    $partial("templates/nav.html")$
-                </div>
-                <div id="content">
+                <div id="content-cv">
                     $body$
+                    <hr/>
+                    <footer>
+                        $partial("templates/contact-cv.html")$
+                    </footer>
                 </div>
             </div>
         </div>
     </body>
-    <script language="javascript" src="/css/app.js" defer></script>
 </html>
