--- a/templates/header.html
+++ b/templates/header.html
@@ -16,10 +16,13 @@
             </td>
             <td>
                 <div>
-                    <h1 class="display-4">Posts tagged [$tag$]</h1>
-                    <p class="lead">That's all there is<a href="#fn1" class="footnote-ref" id="fnref1"><sup>1</sup></a></p>
+                    <h1 class="display-4">$title$</h1>
+                    $if(subtitle)$
+                    <p class="lead">$subtitle$</p>
+                    $endif$
                 </div>
             </td>
+            </tr>
         </tbody>
     </table>
 </header>
