Move templates to template/posts and templates/projects.

--- a/templates/tag.html
+++ b/templates/tag.html
@@ -1,6 +1,6 @@
 <article>
     $partial("templates/tag-header.html")$
-    $partial("templates/post-list.html")$
+    $partial("templates/posts/post-list.html")$
 </article>
 <section class="footnotes">
 <hr>
