--- a/templates/banner.html
+++ b/templates/banner.html
@@ -1,1 +1,1 @@
-<h1 class="card-title" title="block scope delimited with curlies"><a href="/">{...}</a></h1>
+<h1 class="card-title" title="block scope delimited with curlies">{<a href="/">...</a>}</h1>
