--- a/templates/nav.html
+++ b/templates/nav.html
@@ -2,13 +2,12 @@
     $partial("templates/banner.html")$
     <nav>
         <ul class="nav flex-column">
-            <li class="nav-item"><a class="nav-link" href="/post/">blog</a></li>
-            <li class="nav-item"><a class="nav-link" href="/contrib/">open sourcery</a></li>
-            <li class="nav-item"><a class="nav-link" href="/tweet/">pinned tweets</a></li>
-            <li class="nav-item"><a class="nav-link" href="/project/">flying comps</a></li>
+            <li class="nav-item"><a class="nav-link" href="/blog/">blog</a></li>
+            <li class="nav-item"><a class="nav-link" href="/projects/">projects</a></li>
             <li class="nav-item"><a class="nav-link" href="/b/">services</a></li>
             <li class="nav-item"><a class="nav-link" href="/p/">about</a></li>
             <li class="nav-item"><a class="nav-link" href="/cv/">CV</a></li>
+            <li class="nav-item"><a class="nav-link" href="/tweets/">tweets</a></li>
         </ul>
     </nav>
 </div>
