--- a/templates/projects/project.html
+++ b/templates/projects/project.html
@@ -12,7 +12,7 @@
         <div class="container">
             <div class="row">
                 <div id="side" class="col-3 card d-print-none">
-                    $partial("templates/nav.html")$
+                    $partial("templates/projects/nav.html")$
                 </div>
                 <div class="col-9">
                     $body$
