Rename to tooling. Mention ucum on the units project.

--- a/templates/projects/nav.html
+++ b/templates/projects/nav.html
@@ -6,7 +6,7 @@
             <li class="nav-item"><a class="nav-link" href="/projects/uom/">&nbsp;units</a></li>
             <li class="nav-item"><a class="nav-link" href="/projects/geodetics/">&nbsp;geodetics</a></li>
             <li class="nav-item"><a class="nav-link" href="/projects/fly/">&nbsp;flight</a></li>
-            <li class="nav-item"><a class="nav-link" href="/projects/build-tools/">&nbsp;build tools</a></li>
+            <li class="nav-item"><a class="nav-link" href="/projects/tooling/">&nbsp;tooling</a></li>
         </ul>
     </nav>
 </div>
