--- a/app.sass
+++ b/app.sass
@@ -262,3 +262,15 @@ a
 
 dd
     margin-left: 2em
+
+.warning
+    background: #ffedcc
+    padding: 0.5em
+    margin-bottom: 1em
+
+.warning > div.title > p:before
+    content: "> !"
+    display: inline-block
+
+.warning > div.title
+    font-family: 'B612 Mono', monospace
