Change self-funded symbol.

--- a/templates/contact-cv.html
+++ b/templates/contact-cv.html
@@ -14,7 +14,7 @@
         <i class="fas fa-phone"></i> +1-450-675-9180<br/>
         <i style="color:#00aff0" class="fab fa-skype"></i> philderbeast<br/>
         <br />
-        <pre><code><span class="date">&dollar;=full time, #=part time, ?=unpaid</span></code></pre>
+        <pre><code><span class="date">&dollar;=full-time, #=part-time, †=self-funded</span></code></pre>
     </address>
 </div>
 <div class="col-4">
