Fix badges with upgrade to bootstrap 5.

--- a/app.sass
+++ b/app.sass
@@ -35,8 +35,8 @@ body#body-cv
 .badge:after
     content: "]"
 
-.badge.badge-light
-    background-color: transparent
+a.badge.bg-light
+    background-color: transparent !important
 
 article
     font-family: et-book, Palatino, "Palatino Linotype", "Palatino LT STD", "Book Antiqua", Georgia, serif
