--- a/templates/posts/post.html
+++ b/templates/posts/post.html
@@ -1,7 +1,7 @@
 <article>
     $partial("templates/header.html")$
     $if(tags)$
-        <div class="float-right">
+        <div class="float-end">
         $tags$
         </div>
         <div class="clearfix">
