Go with nav-vert and nav-horiz for responsive.

--- a/app.sass
+++ b/app.sass
@@ -103,11 +103,11 @@ blockquote footer
 blockquote footer:before
     content: "— "
 
-#side
+#nav-side
     background-color: inherit
     border: inherit
 
-#side > .card-body
+#nav-side > .card-body
     padding-left: 0
     padding-top: 0
 
@@ -262,7 +262,7 @@ div.work-history > pre
 a:target::after
     content: " ☜"
 
-a.nav-link
+#nav-side a.nav-link
     font-size: 1.4rem
     font-weight: bold
 
