--- a/templates/blockscope.html
+++ b/templates/blockscope.html
@@ -1,27 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        $partial("templates/meta.html")$
-        <title>Block Scope - Fresh coding and untangling knotty codebases.</title>
-        <link rel="stylesheet" href="/css/app.css" >
-        $partial("templates/favicon.html")$
-    </head>
-    <body>
+
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    $partial("templates/meta.html")$
+    <title>Block Scope - Fresh coding and untangling knotty codebases.</title>
+    <link rel="stylesheet" href="/css/app.css">
+    $partial("templates/favicon.html")$
+</head>
+
+<body>
+    <div class="d-lg-none">
+        <div id="nav-top" class="d-print-none">
+            $partial("templates/nav-horiz.html")$
+        </div>
+        <div id="content" class="d-print-col-12">
+            $body$
+            <hr />
+            <footer>
+                $partial("templates/contact-blockscope.html")$
+            </footer>
+        </div>
+    </div>
+    <div class="d-none d-lg-block">
         <div class="container">
             <div class="row">
-                <div id="side" class="col-3 card d-print-none">
-                    $partial("templates/nav.html")$
+                <div id="nav-side" class="col-3 card d-print-none">
+                    $partial("templates/nav-vert.html")$
                 </div>
                 <div id="content">
                     $body$
-                    <hr/>
+                    <hr />
                     <footer>
                         $partial("templates/contact-blockscope.html")$
                     </footer>
                 </div>
             </div>
         </div>
-    </body>
+    </div>
+</body>
+
 </html>
