--- a/templates/drafts/default.html
+++ b/templates/drafts/default.html
@@ -15,8 +15,8 @@
     <body>
         <div class="container">
             <div class="row">
-                <div id="side" class="col-3 card d-print-none">
-                    $partial("templates/drafts/nav.html")$
+                <div id="nav-side" class="col-3 card d-print-none">
+                    $partial("templates/drafts/nav-vert.html")$
                 </div>
                 <div id="content" class="d-print-col-12">
                     $body$
