Adjust #content width for responsive.

--- a/app.sass
+++ b/app.sass
@@ -111,8 +111,11 @@ blockquote footer:before
     padding-left: 0
     padding-top: 0
 
-#content
+.d-lg-block #content
     @extend .col-9
+
+.d-lg-none #content
+    @extend .col-12
 
 #content-cv
     @extend .col-12
