--- a/templates/contact-cv.html
+++ b/templates/contact-cv.html
@@ -2,7 +2,7 @@
 <div class="col-4">
 <address>
     <strong>Phil de Joux</strong><br/>
-    1425 chemin de la Rivière<br/>
+    1350 rue Sainte-Olive<br/>
     Val-David<br/>
     Quebec J0T 2N0<br/>
     CANADA<br/>
