Add FPCO and Updo to CV

--- a/app.sass
+++ b/app.sass
@@ -137,11 +137,12 @@ blockquote footer:before
 
 $date: #808080
 
-// NOTE: First group of 2.
-// SEE: https://colorbrewer2.org/#type=qualitative&scheme=Paired&n=5
-// ['#e66101','#fdb863','#f7f7f7','#b2abd2','#5e3c99']
-$blobs: #e66101
-$flaretiming: #5e3c99
+// NOTE: First group of 3.
+// SEE: https://colorbrewer2.org/#type=qualitative&scheme=Set3&n=5
+// ['#8dd3c7', '#ffffb3', '#bebada', '#fb8072', '#80b1d3' ]
+$updo: #8dd3c7
+$blobs: #bebada
+$flaretiming: #fb8072
 
 // NOTE: Second group of 6.
 // SEE: https://colorbrewer2.org/#type=qualitative&scheme=Paired&n=6
@@ -178,6 +179,10 @@ $skype: #00aff0
 .date,
 .date > code
     color: $date
+
+.updo,
+.updo > code
+    color: $updo
 
 .blobs,
 .blobs > code
