--- a/app.sass
+++ b/app.sass
@@ -45,9 +45,6 @@ article
 .sourceCode, .pre
     font-size: 0.9rem
 
-.sourceCode.diff
-    font-size: 1.05rem
-
 .sourceCode.diff span.st
     color: #DC322F
 
@@ -315,16 +312,22 @@ dd
 
 .tip > div.title,
 .hint > div.title
-    background: #1abc9c
+    color: #1abc9c
 
 .note > div.title
-    background: #6ab0de
+    color: #6ab0de
 
 .warning > div.title
-    background: #f0b37e 
+    color: #f0b37e 
 
 .hint > p,
-.tip> p,
-.note> p,
+.tip > p,
+.note > p,
 .warning > p
     padding-left: 0.5em
+
+.hint,
+.tip,
+.note,
+.warning
+    padding: 0em 0.5em
