Add separate pages for stack and cabal contribs

--- a/templates/projects/nav-vert.html
+++ b/templates/projects/nav-vert.html
@@ -7,6 +7,8 @@
             <li class="nav-item"><a class="nav-link" href="/projects/geodetics/">&nbsp;geodetics</a></li>
             <li class="nav-item"><a class="nav-link" href="/projects/fly/">&nbsp;flight</a></li>
             <li class="nav-item"><a class="nav-link" href="/projects/tooling/">&nbsp;tooling</a></li>
+            <li class="nav-item"><a class="nav-link" href="/projects/cabal/">&nbsp;&nbsp;cabal</a></li>
+            <li class="nav-item"><a class="nav-link" href="/projects/stack/">&nbsp;&nbsp;stack</a></li>
         </ul>
     </nav>
 </div>
