Add scarf analytics pixel

--- a/templates/blockscope.html
+++ b/templates/blockscope.html
@@ -39,6 +39,7 @@
             </div>
         </div>
     </div>
+    <img alt="blockscope-services-analytics" referrerpolicy="no-referrer-when-downgrade" src="https://static.scarf.sh/a.png?x-pxid=a56729f4-5ea1-40f8-8b1a-5b1cf0e0a68a" />
 </body>
 
 </html>
