--- a/templates/cv.html
+++ b/templates/cv.html
@@ -20,5 +20,6 @@
                 </div>
             </div>
         </div>
+        <img alt="blockscope-cv-analytics" referrerpolicy="no-referrer-when-downgrade" src="https://static.scarf.sh/a.png?x-pxid=34dc11d5-fd45-4259-86fe-64c8b6c90253" />
     </body>
 </html>
