--- a/templates/posts/default.html
+++ b/templates/posts/default.html
@@ -39,6 +39,7 @@
             </div>
         </div>
     </div>
+    <img alt="blockscope-analytics" referrerpolicy="no-referrer-when-downgrade" src="https://static.scarf.sh/a.png?x-pxid=0fc34a86-7ed4-4c30-a942-b33d015d5d27" />
 </body>
 
 </html>
